--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "start:dev": "NODE_ENV=development node run start",
     "start:dev:watch": "NODE_ENV=development node run start:watch",
     "start:prod": "NODE_ENV=production node run start",
-    "test": "NODE_ENV=test mocha --timeout 10000 --colors --exit ./tests/**/*.spec.js",
+    "test:mocha": "mocha --timeout 10000 --colors --exit ./tests/**/*.spec.js",
+    "test": "NODE_ENV=test npm run test:mocha",
     "test:watch": "NODE_ENV=test npm test -- --watch",
-    "cov": "NODE_ENV=test nyc npm test",
-    "cov:check": "NODE_ENV=test nyc check-coverage --lines 70 --functions 70 --statements 70 --branches 70",
-    "ci:test": "NODE_ENV=citest npm run test",
+    "cov": "nyc npm test",
+    "cov:check": "nyc check-coverage --lines 70 --functions 70 --statements 70 --branches 70",
+    "ci:test": "NODE_ENV=citest npm run test:mocha",
     "ci:report": "NODE_ENV=citest nyc report --reporter=text-lcov"
   },
   "repository": {
