--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,4 +21,7 @@ jobs:
           command: 'npm run ci:test'
       - run:
           name: Code coverage
+          command: 'npm run cov'
+      - run:
+          name: Create report
           command: 'npm run ci:report'
