--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,10 @@ jobs:
       - run:
           name: Testing application
           command: 'npm run ci:test'
+          environment:
+            MOCHA_FILE: test/results/test-results.xml
       - run:
           name: Create report
           command: 'npm run ci:report'
+      - store_test_results:
+          path: test/results
