--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:watch": "NODE_ENV=test npm test -- --watch",
     "cov": "nyc npm test",
     "cov:check": "nyc check-coverage --lines 70 --functions 70 --statements 70 --branches 70",
-    "ci:test": "NODE_ENV=citest nyc npm run test:mocha",
+    "ci:test": "NODE_ENV=citest nyc npm run test:mocha -- --reporter mocha-junit-reporter",
     "ci:report": "NODE_ENV=citest nyc report --reporter=text-lcov"
   },
   "repository": {
@@ -47,6 +47,7 @@
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "mocha": "^4.1.0",
+    "mocha-junit-reporter": "^1.15.0",
     "nodemon": "^1.14.10",
     "nyc": "^11.4.1"
   }
