--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "cov": "nyc npm test",
     "cov:check": "nyc check-coverage --lines 70 --functions 70 --statements 70 --branches 70",
     "ci:test": "NODE_ENV=citest nyc npm run test:mocha -- --reporter mocha-junit-reporter",
-    "ci:report": "NODE_ENV=citest nyc report --reporter=lcov > coverage.lcov && codecov"
+    "ci:report": "NODE_ENV=citest nyc report --reporter=lcov > coverage.lcov && ./node_modules/.bin/codecov"
   },
   "repository": {
     "type": "git",
@@ -46,6 +46,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "codecov": "^3.0.0",
     "mocha": "^4.1.0",
     "mocha-junit-reporter": "^1.15.0",
     "nodemon": "^1.14.10",
