--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "start:watch": "NODE_ENV=development nodemon server.js",
+    "start:watch": "nodemon server.js",
     "start:dev": "NODE_ENV=development node run start",
     "start:dev:watch": "NODE_ENV=development node run start:watch",
     "start:prod": "NODE_ENV=production node run start",
     "test:mocha": "mocha --timeout 10000 --colors --exit ./tests/**/*.spec.js",
     "test": "NODE_ENV=test npm run test:mocha",
     "test:watch": "NODE_ENV=test npm test -- --watch",
-    "cov": "nyc npm test",
+    "cov": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "cov:check": "nyc check-coverage --lines 70 --functions 70 --statements 70 --branches 70",
     "ci:test": "NODE_ENV=citest nyc npm run test:mocha -- --reporter mocha-junit-reporter",
-    "ci:report": "NODE_ENV=citest nyc report --reporter=lcov > coverage.lcov && ./node_modules/.bin/codecov"
+    "ci:report": "NODE_ENV=citest nyc report --reporter=lcov > coverage.lcov && codecov",
+    "monitor:start": "pm2 start server.js --name rdf-server",
+    "monitor:stop": "pm2 stop rdf-server",
+    "monitor:show": "pm2 show rdf-server",
+    "monitor:restart": "pm2 restart rdf-server",
+    "monitor:delete": "pm2 delete rdf-server",
+    "monitor:log": "pm2 logs rdf-server"
   },
   "repository": {
     "type": "git",
@@ -47,9 +53,11 @@
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "codecov": "^3.0.0",
+    "coveralls": "^3.0.0",
     "mocha": "^4.1.0",
     "mocha-junit-reporter": "^1.15.0",
     "nodemon": "^1.14.10",
-    "nyc": "^11.4.1"
+    "nyc": "^11.4.1",
+    "pm2": "^2.9.1"
   }
 }
